--- a/_posts/2020-08-04-JVM.md
+++ b/_posts/2020-08-04-JVM.md
@@ -1,13 +1,11 @@
-
-
 ---
-
 layout: post
 title: JVM入门-内存结构
 date: 2020-08-04
 Author: hhw
 toc: true
 comments: true
+
 tags:  [java,JVM]
 
 ---
@@ -146,7 +144,7 @@ java代码编译和执行的整个过程包含了以下三个重要的机制:
 >
 > 待完善：https://www.cnblogs.com/benwu/articles/8025258.html
 
-#### 3.本地方法栈 √
+#### 3.本地方法栈 
 
 ​		 虚拟机的 **Native** 方法执行的内存区。底层并不是通过Java去实现的，而是通过C/C++去实现的，Java仅仅负责调度，我们无需关心具体如何实现，也无法看到具体如何实现。
 
