--- a/_posts/2020-09-17-project.md
+++ b/_posts/2020-09-17-project.md
@@ -512,8 +512,8 @@ netstat -antp
 
 ## 2.SpringBoot打包
 
-> #### **以打war包部署到外部Tomcat为例子**
->
+> **以打war包部署到外部Tomcat为例子**
+
 > 打包前注意referer添加一个服务器的ip地址
 
 **步一：pom.xml修改**
