--- a/_posts/2020-09-17-project.md
+++ b/_posts/2020-09-17-project.md
@@ -244,7 +244,11 @@ rpm -qa | grep mysql
 更新wget：
 
 ```bash
+yum -y install wget
+
 wget --no-check-certificate  http://dev.mysql.com/get/mysql57-community-release-el6-7.noarch.rpm
+
+rpm -ivh mysql-community-release-el7-5.noarch.rpm
 ```
 
 安装完后查看源情况：
