--- a/_posts/2020-09-17-project.md
+++ b/_posts/2020-09-17-project.md
@@ -271,6 +271,21 @@ yum list mysql-community*
 yum -y install mysql-server
 ```
 
+⚠️ [Centos7.5安装mysql5.7.28rpm包报错：postfix-2.10.1-6.el7.x86_64需要：libmysqlclien]：
+
+```
+yum remove mysql-libs
+```
+
+⚠️[遇到的问题 libsasl2.so.2]：
+
+找到 /etc/yum.repos.d/mysql-community.repo
+打开后，找到 [mysql57-community] 这一块配置(将加粗的两个位置更新一下)
+baseurl=http://repo.mysql.com/yum/mysql-5.7-community/el/**7**/$basearch/
+gpgcheck=**0**
+
+
+
 **启动**
 
 ```bash
