--- a/_posts/2020-09-17-project.md
+++ b/_posts/2020-09-17-project.md
@@ -547,6 +547,21 @@ netstat -antp
 
 配置文件在conf文件夹中，可自行更改
 
+**配置**
+
+- 413错误
+
+  原因：nginx限制了文件上传大小，需要更改nginx配置
+
+  解决：在nginx.conf `http段`配置文件中配置允许客户端请求文件大小
+
+  ```
+  client_max_body_size 10m; #允许客户端请求的最大单文件字节数
+  client_body_buffer_size 128k; #缓冲区代理缓冲用户端请求的最大字节数
+  ```
+
+
+
 ## 2.SpringBoot打包
 
 > **以打war包部署到外部Tomcat为例子**
@@ -737,5 +752,37 @@ systemctl status docker
    docker start [CONTAINER ID]
    ```
 
-   
+
+3. 停止指定容器
+
+   ```
+   docker stop [CONTAINER ID]
+   ```
+
+## 5.minio文件服务器
+
+> 使用docker安装minio 文件上传服务器
+
+第三方中文官网: https://docs.min.io/cn/minio-quickstart-guide.html
+
+**安装**
+
+```
+docker pull minio/minio
+docker run -p 9000:9000 minio/minio server /data
+```
+
+配置密码+新建容器
+
+```
+docker run -p 9000:9000 --name minio2n -e "MINIO_ACCESS_KEY=【用户名】" -e "MINIO_SECRET_KEY=【密码】" -v /mnt/data:/data -v /mnt/config:/root/.minio minio/minio server /data
+```
+
+--name 后接容器名
+
+**配置Nginx**
+
+配置nginx反向代理到9000端口即可。
+
+存在问题：上传文件时无法使用反向代理的路径，只能使用ip:9000端口的方式上传
 
