--- a/_posts/2021-02-07-nginx.md
+++ b/_posts/2021-02-07-nginx.md
@@ -15,7 +15,7 @@ tags:  [nginx]
 
 这里采用新增配置文件的方式，不对原生配置文件进行大改动，只需在原配置文件里加入include去读指定目录下的配置文件即可，如下
 
-```js
+```python
 http {
     	include       mime.types;
     	default_type  application/octet-stream;
@@ -46,7 +46,7 @@ http {
 		server_name  _;
 		return 444;
 	    }
-	// 在这里配置去读区指定目录下的配置文件
+	# 在这里配置去读区指定目录下的配置文件
 	include C:/TRT/nginx/conf/vhosts/*.conf;
 }
 ```
@@ -55,7 +55,7 @@ http {
 
 #### 前后端配置
 
-```js
+```python
 server {
   	# 端口
     listen 80; 
@@ -82,8 +82,8 @@ server {
       rewrite ^(.*)$ /console/index.html?c=$1 last;
       break;
     }
-      # 前端项目包所在路径
-      alias  C:/TRT/TRTPROJECT/console-ui/;
+    # 前端项目包所在路径
+    alias  C:/TRT/TRTPROJECT/console-ui/;
   }
 	
 	location /project/ {
@@ -91,7 +91,7 @@ server {
 			rewrite ^(.*)$ /project/index.html?p=$1 last;
 			break;
 		}
-        alias  C:/TRT/TRTPROJECT/project-ui/;
+       alias  C:/TRT/TRTPROJECT/project-ui/;
    }
 		
    # 后端代理路径
@@ -109,17 +109,17 @@ server {
 
 该案例采用阿里云ssl证书，证书和密钥从阿里云进行下载，放置在nginx的conf目录-新建一个文件夹存放密钥
 
-```js
+```python
 server {
     listen 443; 
     server_name www.aiyuxingfu.cn;
   	# 根据nginx版本决定是否设置on
 		ssl on;
 	
-  # 配置ssl证书
-	ssl_certificate cert/4566504_aiyuxingfu.cn.pem;
-  # 证书随附密钥
-	ssl_certificate_key cert/4566504_aiyuxingfu.cn.key;
+    # 配置ssl证书
+    ssl_certificate cert/4566504_aiyuxingfu.cn.pem;
+    # 证书随附密钥
+    ssl_certificate_key cert/4566504_aiyuxingfu.cn.key;
 	
   	# 13-16行参照阿里云文档填写
     ssl_session_timeout 5m;
