数字签名、数字摘要、数字证书笔记 格式调整

--- a/_posts/2021-07-28-digest.md
+++ b/_posts/2021-07-28-digest.md
@@ -8,7 +8,7 @@ toc: true
 tags:  [数字签名,数字证书]
 ---
 
-## 1. 摘要
+## 1.摘要
 
 一段信息，经过摘要算法得到一串哈希值（不管信息多长，摘要长度固定，便于加密生成数字签名，摘要非加密）
 
@@ -36,7 +36,7 @@ tags:  [数字签名,数字证书]
 
   答：可能是内容很长吧，直接加密算半天！摘要算法可以把无限长的内容输出成长度固定的摘要，再进行加密时间就是可以预估的
 
-## 3. **数字证书**
+## 3.数字证书
 
 由CA颁发，<u>包含发送方的公钥信息</u>（需要由CA的公钥解密才能得到）。
 
