--- a/_posts/2020-09-17-project.md
+++ b/_posts/2020-09-17-project.md
@@ -41,6 +41,96 @@ yum install java-1.8.0-openjdk* -y
 
 使用yum命令安装后无需配置，安装完后需要检查jdk环境是否更新
 
+**更换JDK版本**
+
+> 原因：openJDK去掉了某个类，导致启动项目失败 `java.lang.ClassNotFoundException: com.sun.image.codec.jpeg.JPEGCodec`的问题：查询资料得知，原来openjdk从jdk7开始去掉了这个类。所以不能再继续使用自带的openJDK，重新安装JDK1.8
+
+- 卸载原OpenJDK
+
+  - 查看系统jdk版本
+
+    ```bash
+    [root@localhost software]# java -version
+    openjdk version "1.8.0_102"
+    OpenJDK Runtime Environment (build 1.8.0_102-b14)
+    OpenJDK 64-Bit Server VM (build 25.102-b14, mixed mode)
+    ```
+
+  - 检测jdk安装包
+
+    ```bash
+    [root@localhost software]# rpm -qa | grep java
+    java-1.7.0-openjdk-1.7.0.111-2.6.7.8.el7.x86_64
+    python-javapackages-3.4.1-11.el7.noarch
+    tzdata-java-2016g-2.el7.noarch
+    javapackages-tools-3.4.1-11.el7.noarch
+    java-1.8.0-openjdk-1.8.0.102-4.b14.el7.x86_64
+    java-1.8.0-openjdk-headless-1.8.0.102-4.b14.el7.x86_64
+    java-1.7.0-openjdk-headless-1.7.0.111-2.6.7.8.el7.x86_64
+    ```
+
+  - 卸载openJDK
+
+    ```bash
+     [root@localhost jvm]# yum remove *openjdk*
+    ```
+
+  - 查看卸载情况
+
+    ```bash
+    [root@localhost software]# rpm -qa | grep java
+    python-javapackages-3.4.1-11.el7.noarch
+    javapackages-tools-3.4.1-11.el7.noarch
+    ```
+
+- 安装JDK
+
+  - 从华为云下载JDK1.8（到指定位置）
+
+    ```bash
+    wget https://repo.huaweicloud.com/java/jdk/8u192-b12/jdk-8u192-linux-x64.tar.gz
+    ```
+
+  - 解压
+
+    ```bash
+    [root@edi02 ~]# cd /usr/lib/java
+    [root@edi02 java]# tar -zxvf jdk-8u192-linux-x64.tar.gz
+    ```
+
+  - 创建符号连接统一管理（可选），以后有新版本，只要更改这个连接就可以了
+
+    ```bash
+    [root@edi02 java]# ln -s /usr/lib/java/jdk1.8.0_201 /usr/jdk
+    ```
+
+  - 修改环境变量
+
+    ```bash
+    [root@edi02 java]# vim /etc/profile
+    ```
+
+    添加以下内容
+
+    ```
+    JAVA_HOME=/usr/jdk
+    CLASSPATH=$JAVA_HOME/lib/
+    PATH=$PATH:$JAVA_HOME/bin
+    export PATH JAVA_HOME CLASSPATH
+    ```
+
+  - 使配置生效
+
+    ```bash
+    [root@edi02 java]# source /etc/profile
+    ```
+
+  - 检查是否安装成功
+
+    ```bash
+    java -version
+    ```
+
 #### 1.2 Tomcat
 
 **下载Tomcat**
