更新部署文档

--- a/_posts/2020-09-17-project.md
+++ b/_posts/2020-09-17-project.md
@@ -876,3 +876,122 @@ docker run -p 9000:9000 --name minio2n -e "MINIO_ACCESS_KEY=【用户名】" -e 
 
 存在问题：上传文件时无法使用反向代理的路径，只能使用ip:9000端口的方式上传
 
+## 6.Jenkins
+
+### 1.安装
+
+[下载镜像文件](http://mirrors.jenkins-ci.org/redhat/)
+
+**解压：**
+
+```bash
+rpm -ivh [文件名]
+```
+
+**配置端口：**
+
+```bash
+vim /etc/sysconfig/jenkins
+
+#监听端口
+JENKINS_PORT="8080"
+```
+
+**配置权限**
+
+为了不因为权限出现各种问题，这里直接使用root
+
+修改用户为root
+
+```shell
+vim /etc/sysconfig/jenkins
+
+#修改配置
+$JENKINS_USER="root"
+```
+
+修改目录权限
+
+```shell
+chown -R root:root /var/lib/jenkins
+chown -R root:root /var/cache/jenkins
+chown -R root:root /var/log/jenkins
+```
+
+### 2.配置JDK
+
+```
+vim /etc/init.d/jenkins
+```
+
+在candidates后添加JDK路径
+
+![image-20211007171211097](https://blog-1302755396.cos.ap-shanghai.myqcloud.com/blog/20211007204437.png)
+
+### 3.启动
+
+```
+# 直接启动
+systemctl start jenkins
+
+或
+
+# 改完配置文件的重启
+systemctl daemon-reload
+systemctl restart jenkins
+```
+
+### 4.修改防火墙端口
+
+修改防火墙，开启端口以遍外部访问
+
+```
+vim /etc/sysconfig/iptables	
+```
+
+配置可参考Tomcat端口开启配置
+
+### 5.构建SpringBoot项目
+
+
+
+
+
+## 7.SpringBoot Jar运行
+
+打完Jar包后，如何保持后台运行：
+
+```
+nohup java -jar server-0.0.1-SNAPSHOT.jar >log.log &
+```
+
+- nohup表示不挂断运行命令，即使shell关闭了，程序依然会在后台运行。
+
+- 其中的>log.log表示将程序的输出重定向到log.log文件中，默认的情况下，是输出到当前目录下的nohup.out文件中。
+
+  
+
+## 8.开启FTP服务(废弃，直接使用sftp)
+
+1.1 安装 VSFTPD
+
+使用 yum 安装 [vsftpd]：
+
+`yum install vsftpd -y`
+
+vsftpd 是在 Linux 上被广泛使用的 FTP 服务器，根据其官网介绍，它可能是 UNIX-like 系统下最安全和快速的 FTP 服务器软件。
+
+1.2 启动 VSFTPD
+
+安装完成后，启动 FTP 服务：
+
+`service vsftpd start`
+
+服务启动后，查看21端口是否启动：
+
+`netstat -nltp | grep 21 `
+
+此时，在浏览器访问 ftp:// 服务器的IP 就可浏览机器上的 /var/ftp 目录了。
+
+**PS：记得打开防火墙端口**
+
