--- a/_posts/2021-12-07-redis.md
+++ b/_posts/2021-12-07-redis.md
@@ -1,3 +1,12 @@
+---
+layout: post
+title: Redis笔记
+date: 2021-12-07
+Author: hhw
+comments: true
+tags:  [java,redis]
+---
+
 ##   Redis学习笔记
 
 学习地址：https://www.bilibili.com/video/BV1S54y1R7SB?spm_id_from=333.999.0.0
