服务定位模式笔记

--- a/_posts/2023-03-09-linux常用指令.md
+++ b/_posts/2023-03-09-linux常用指令.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Linux常用指令
+date: 2023-03-09
+Author: hhw
+comments: true
+toc: true
+tags:  [Linux]
+---
+
 # 一、CPU&内存
 
 ## 1.CPU
