--- a/_posts/2022-03-12-使用服务定位模式消除ifelse.md
+++ b/_posts/2022-03-12-使用服务定位模式消除ifelse.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Linux常用指令
-date: 2023-03-09
+title: 服务定位模式消除ifelse
+date: 2023-03-12
 Author: hhw
 comments: true
 toc: true
-tags:  [Linux]
+tags:  [java]
 
 ---
 
