更新nacos笔记头简述

--- a/_posts/2023-05-11-nacos入门.md
+++ b/_posts/2023-05-11-nacos入门.md
@@ -1,4 +1,13 @@
-# 2022-04-05-Nacos学习笔记
+---
+layout: post
+title: Nacos学习笔记
+date: 2023-05-11
+Author: hhw
+comments: true
+toc: true
+tags:  [java,nacos]
+
+---
 
 仓库：https://gitee.com/sensationhhw/nacos-discovery-demo.git
 
