--- a/_posts/2022-08-23-Jenkins自动化构建.md
+++ b/_posts/2022-08-23-Jenkins自动化构建.md
@@ -29,6 +29,7 @@
 
 安装完成后，在`Global Toool Configuration`配置node信息，这里配置了本地的node
 ![image.png](https://cdn.nlark.com/yuque/0/2022/png/27216901/1661238868087-57917b20-77e2-494e-abb7-1957e43d0f3f.png#averageHue=%23fefefe&clientId=u6efc215e-ab18-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=615&id=uba6a1f91&margin=%5Bobject%20Object%5D&name=image.png&originHeight=1230&originWidth=2136&originalType=binary&ratio=1&rotation=0&showTitle=false&size=81365&status=done&style=none&taskId=u54ef7415-7fa0-4e61-8504-43d5b428c0a&title=&width=1068)
+
 ## 1.3 Build With Parameters
 安装参数化构建插件
 ![image.png](https://cdn.nlark.com/yuque/0/2022/png/27216901/1661238692520-be08d776-b172-4325-9c3e-100148de5c4d.png#averageHue=%23f5f5f5&clientId=u6efc215e-ab18-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=183&id=u889d0b79&margin=%5Bobject%20Object%5D&name=image.png&originHeight=366&originWidth=2080&originalType=binary&ratio=1&rotation=0&showTitle=false&size=57271&status=done&style=none&taskId=u9c651e62-804c-487d-8895-c33acc45b95&title=&width=1040)
@@ -64,6 +65,7 @@ Linux使用占位符：${占位符}
 配置代码在SVN的存放路径，配置SVN账号密码
 P.S. 如果这里没有Subversion的选项，请先安装Subversion插件
 ![image.png](https://cdn.nlark.com/yuque/0/2022/png/27216901/1661235505399-ebe31755-d61c-451e-bd92-10bd032bd6d1.png#averageHue=%23f7f7f7&clientId=u6efc215e-ab18-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=726&id=ucbc7603d&margin=%5Bobject%20Object%5D&name=image.png&originHeight=1452&originWidth=2146&originalType=binary&ratio=1&rotation=0&showTitle=false&size=135485&status=done&style=none&taskId=ud6682e0d-8895-412f-baaf-6f5fa046e5e&title=&width=1073)
+
 ## 2.4 配置node
 如图，配置node信息，这里的node请选择之前在全局配置中配置的。
 ![image.png](https://cdn.nlark.com/yuque/0/2022/png/27216901/1661235639627-e5d084e8-c676-4db8-913f-08efef758552.png#averageHue=%23f8f8f8&clientId=u6efc215e-ab18-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=456&id=u909c1042&margin=%5Bobject%20Object%5D&name=image.png&originHeight=912&originWidth=2256&originalType=binary&ratio=1&rotation=0&showTitle=false&size=95361&status=done&style=none&taskId=udbaf4258-3228-4c0b-9e62-090a61a65ec&title=&width=1128)
@@ -121,4 +123,59 @@ svn import -m "jenkins自动发布-pcmjt.jar" G:\项管\测试版\lasted\pcmjt h
 ```
 完整截图示例：
 ![image.png](https://cdn.nlark.com/yuque/0/2022/png/27216901/1661240588682-7c5da648-d77c-4269-b697-bb1a6ee57aae.png#averageHue=%23f6f6f6&clientId=u6efc215e-ab18-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=1605&id=udca0c117&margin=%5Bobject%20Object%5D&name=image.png&originHeight=3210&originWidth=2038&originalType=binary&ratio=1&rotation=0&showTitle=false&size=413023&status=done&style=none&taskId=u74f93234-87cc-48b6-9d97-eeee3a3499b&title=&width=1019)
+
+# 四、通知配置
+
+## 4.1邮件通知
+
+
+
+
+
+
+
+## 4.2qq通知
+
+> 基于goCqHttp实现qq通知功能，需要独立部署goCqhttp：https://github.com/Mrs4s/go-cqhttp
+
+1. 修改配置文件，开放http端口
+
+   ```yml
+   # 连接服务列表
+   servers:
+     # 添加方式，同一连接方式可添加多个，具体配置说明请查看文档
+     - http: # http 通信
+         address: 0.0.0.0:5700 # HTTP监听地址
+         timeout: 5      # 反向 HTTP 超时时间, 单位秒，<5 时将被忽略
+     #- ws:   # 正向 Websocket
+     #- ws-reverse: # 反向 Websocket
+     #- pprof: #性能分析服务器
+     # 反向WS设置
+     - ws-reverse:
+         # 反向WS Universal 地址
+         # 注意 设置了此项地址后下面两项将会被忽略
+         universal: ws://127.0.0.1:8566/ws
+         # 反向WS API 地址
+         api: ws://your_websocket_api.server
+         # 反向WS Event 地址
+         event: ws://your_websocket_event.server
+         # 重连间隔 单位毫秒
+         reconnect-interval: 3000
+         middlewares:
+           <<: *default # 引用默认中间件
+   ```
+
+2. 启动gocqhttp
+
+3. jenkins配置构建成功后通知
+
+   中文要进行转码，放到浏览器中再复制出来
+
+   ```
+   curl "http://192.168.100.66:5700/send_group_msg?group_id=798665972&message=%%E8%%87%%AA%%E5%%8A%%A8%%E5%%8F%%91%%E5%%B8%%83%%EF%%BC%%9A%%E5%%B8%%82%%E6%%94%%BF%%E5%%89%%8D%%E7%%AB%%AF%%E6%%89%%93%%E5%%8C%%85%%E5%%AE%%8C%%E6%%88%%90%%EF%%BC%%8C%%E7%%89%%88%%E6%%9C%%AC%%E5%%8F%%B7%version%"
+   ```
+
+   
+
+   
 
