图片全部使用图床地址

--- a/_posts/2024-01-01-kafka.md
+++ b/_posts/2024-01-01-kafka.md
@@ -1,4 +1,12 @@
-# Kafka学习笔记
+---
+layout: post
+title: Kafka入门
+date: 2024-03-10
+Author: hhw
+comments: true
+toc: true
+tags:  [java,kafka]
+---
 
 ## 一、基础概念
 
