--- a/_posts/2022-08-23-Jenkins自动化构建.md
+++ b/_posts/2022-08-23-Jenkins自动化构建.md
@@ -14,7 +14,7 @@
 
 - 安装SVN插件
 
-![image.png](https://cdn.nlark.com/yuque/0/2022/png/27216901/1661239179663-bc86ae23-ca61-4c88-ba9d-dc638f5bb104.png#averageHue=%23f9f9f9&clientId=u6efc215e-ab18-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=88&id=u6f9bcb57&margin=%5Bobject%20Object%5D&name=image.png&originHeight=176&originWidth=2100&originalType=binary&ratio=1&rotation=0&showTitle=false&size=40180&status=done&style=none&taskId=uec885b62-5cf3-4e63-b7ed-5f28b93541d&title=&width=1050)
+![image.png](https://cdn.nlark.com/yuque/0/2022/png/27216901/1661239179663-bc86ae23-ca61-4c88-ba9d-dc638f5bb104.png#averageHue=%23f9f9f9&clientId=u6efc215e-ab18-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=88&id=u6f9bcb57&margin=[object Object]&name=image.png&originHeight=176&originWidth=2100&originalType=binary&ratio=1&rotation=0&showTitle=false&size=40180&status=done&style=none&taskId=uec885b62-5cf3-4e63-b7ed-5f28b93541d&title=&width=1050)
 
 - 配置SVN账户
 
