--- a/_posts/2024-08-27-Docker最佳实践.md
+++ b/_posts/2024-08-27-Docker最佳实践.md
@@ -1,3 +1,12 @@
+---
+layout: post
+title: Docker最佳实践
+date: 2024-08-27
+Author: hhw
+tags: [docker]
+comments: true
+---
+
 # Docker最佳实践
 
 参考文档：https://www.yuque.com/leifengyang/sutong/au0lv3sv3eldsmn8#yjd1N
@@ -483,7 +492,7 @@ curl http://nginxWithMynet:80
 
 ## 五、dockerfile制作镜像
 
-> 官方文档：https://docs.docker.com/reference/dockerfile/
+> 更多细节参数请看官方文档：https://docs.docker.com/reference/dockerfile/
 
 ### 1. 案例：制作一个java应用镜像
 
